<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login_activityaaaa">LoginActivityaaaa</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="function_all">Comprehensive Test</string>
    <string name="function_qrcode">QR Code</string>
    <string name="function_barcode">Bar Code</string>
    <string name="function_text">Text</string>
    <string name="function_tab">Form</string>
    <string name="function_pic">Picture</string>
    <string name="function_multi">Multi Threading</string>
    <string name="function_threeline">Paper Feed</string>
    <string name="function_buffer">Transaction Print</string>
    <string name="function_blackline">Black Label</string>
    <string name="function_cash">Cash Test</string>
    <string name="function_lcd">Lcd Test</string>
    <string name="function_status">Status</string>
    <string name="function_label">Label Test</string>
    <string name="setting_title">Setting</string>
    <string name="info_title">PrinterInformation</string>
    <string name="qr_title">Qr Test</string>
    <string name="barcode_title">BarCode Test</string>
    <string name="text_title">Text Test</string>
    <string name="bitmap_title">Picture Test</string>
    <string name="tab_title">Form Test</string>
    <string name="all_title">Comprehensive Test</string>
    <string name="buffer_title">Transaction Test</string>
    <string name="blackline_title">Black Label Test</string>
    <string name="lcd_title">Lcd Test</string>
    <string name="label_title">Label Test</string>
    <string name="printer_serial_num">serial number</string>
    <string name="printer_model">printer model</string>
    <string name="printer_head">printer head</string>
    <string name="printer_firmware">printer firmware version</string>
    <string name="printer_head_size">priner head size</string>
    <string name="printer_distance">printed distance</string>
    <string name="printer_version">service version</string>
    <string name="printer_dev_version">development version</string>
    <string name="enter_work">Enter Transaction</string>
    <string name="exit_work">Exit Transaction</string>
    <string name="start_work">Start Transaction</string>
    <string name="start_work_low">Start Printing</string>
    <string name="over_work">End Transaction</string>
    <string name="error_work">Exception Occurred</string>
    <string name="print_baidu_ticket">Print Baidu ticket</string>
    <string name="print_meituan_ticket">Print Meituan ticket</string>
    <string name="print_eleme_ticket">Print Eleme ticket</string>
    <string name="print_koubei_ticket">Print Koubei ticket</string>
    <string name="print_interval_black">Print Interval Black</string>
    <string name="print_black">Print Black</string>
    <string name="print">Print</string>
    <string name="printing">Printing~~~</string>
    <string name="input_barcode">Please input barcode content</string>
    <string name="content_barcode">barcode</string>
    <string name="encode_barcode">barcode encode</string>
    <string name="no_print">text null</string>
    <string name="barcode_up">upon barcode</string>
    <string name="barcode_down">beneath barcode</string>
    <string name="barcode_updown">up and beneath</string>
    <string name="text_position">HRI position</string>
    <string name="barcode_height">height</string>
    <string name="barcode_width">width</string>
    <string name="content_qrcode">qrcode</string>
    <string name="input_qrcode">Please input QrCode content</string>
    <string name="array_qrcode">arrangemant</string>
    <string name="size_qrcode">QR-Code size</string>
    <string name="error_qrcode">error correctionlevel </string>
    <string name="upload_info">Upload Printer Info</string>
    <string name="characterset">char set</string>
    <string name="connect_method">connect method</string>
    <string name="size_paper">paper size</string>
    <string name="size_text">text size</string>
    <string name="type_text">text typeface</string>
    <string name="bold_text">bold</string>
    <string name="underline_text">underline</string>
    <string name="print_density">printer density</string>
    <string name="add_line">add</string>
    <string name="content_form">content</string>
    <string name="weight_form">weight%</string>
    <string name="align_form">align</string>
    <string name="align_left">left</string>
    <string name="align_mid">middle</string>
    <string name="align_right">right</string>
    <string name="about">about</string>
    <string name="single">single</string>
    <string name="twice">double</string>
    <string name="connect_service">Connect</string>
    <string name="disconnect_service">Disconnect</string>
    <string name="input_order">input epson command:</string>
    <string name="multithread">multithread</string>
    <string name="multithread_stop">stop</string>
    <string name="pic_pos">picture arrangement mode</string>
    <string name="pic_hor">transverse</string>
    <string name="pic_ver">portrait</string>
    <string name="pic_mode">picture printing method</string>
    <string name="pic_mode1">raster bitmap</string>
    <string name="pic_mode2">8 point single density</string>
    <string name="pic_mode3">8 point double density</string>
    <string name="pic_mode4">24 point single density</string>
    <string name="pic_mode5">24 point double density</string>
    <string name="style_width">times width</string>
    <string name="style_height">times height</string>
    <string name="buffer_info1">Event Print: Controls the print of each order for print status\nIn the process of printing a single transaction, if there is an out-of-paper abnormalities, after the paper state is restored, you can choose to reprint a single.</string>
    <string name="buffer_info2">Step1:start event print model\nStep2:add an event\nStep3:quit event print model</string>
    <string name="bl_info1">Color requirements: reflectivity does not exceed 6%, infrared wavelength 700-1000nm range.</string>
    <string name="bl_info2">Position requirements:Black label needs to be in the middle of the paper level sensor can be detected.</string>
    <string name="bl_info3">Detection of black label: The printer will feed the paper (up to 600mm)to detect the black label</string>
    <string name="bl_set">Black label setting</string>
    <string name="bl_check">Black label checking</string>
    <string name="bl_sample">Black label sample</string>
    <string name="display_text">display a line</string>
    <string name="display_texts">display lines</string>
    <string name="display_pic">display picture</string>
    <string name="label_print_one">print one label</string>
    <string name="label_print_more">print multi label</string>
    <string name="label_info">Sunmi label printing function now only supports handheld V2 and v2pro
        devices. Please consult the supplier before use！</string>
    <string name="label_info2">Usage: different from the standard label instruction, Sunmi label
        printing needs to adapt the printing content and locate the label printing position through the positioning interface</string>
    <string name="sunmi_font">Sunmi monospace</string>
    <string name="custom_font">Custom typeface</string>
    <string name="about_content">PrinterHelper is suitable for the sunmi series. \nPrinterHelper integrate two connection type: AIDL and BLUETOOTH. It also provide a series of printing testing module, which help the developer to connect with the sunmi printing function faster. \n upload the information that need to be printed, which allows sunmi to better locate the issues. \n official site: http://www.sunmi.com. \n developer documentation: http://docs.sunmi.com</string>
    <string name="text_instruction"> specification: The typeface of sunmi is monospaced font. Expect for supporting the font structure set by normal instruction set, it can also use AIDL interface interchange to directly set the font size. However, the testing demo only could use AIDL interface interchange to do it. Developers could look up relative Epson instruction set, then set the font by themselves. \n notice: the setting of the character set only has influence on the order printing, not affecting AIDL printing characters. Printing Single-Byte Character set should set the Single-Byte mode at first. Howerver, the default of sunmi services is double byte mode.  </string>
    <string name="text_print">欢迎光临(Simplified Chinese)\n歡迎光臨（traditional chinese）\nWelcome(English)\n어서 오세요.(Korean)\nいらっしゃいませ(Japanese)\nWillkommen in der(Germany)\nSouhaits de bienvenue(France)\nยินดีต้อนรับสู่(Thai)\nДобро пожаловать(Russian)\nBenvenuti a(Italian)\nvítejte v(Czech)\nBEM - vindo Ao(Portutuese)\nمرحبا بكم في(Arabic)\n</string>
    <string name="mobile_money">Subscriber Mobile Money</string>
    <string name="submit">Submit</string>
    <string name="please_enter_mpin">please enter MPIN</string>
    <string name="confirm">Confirm</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="verification">verification</string>
    <string name="languageChoose">Choose Language</string>
    <string name="englisg">English</string>
    <string name="arabic">عربى</string>
    <string name="nextGen">Tafani</string>
    <string name="enter_mpin_balance_text">Enter the 4-digit MPIN </string>
    <string name="dialogheading">Transaction Result</string>
    <string name="transHistory_display">To view the transaction history, please enter the 4-digit MPIN</string>
    <string name="close">Close</string>
    <string name="change_mpin_display"> To view the change MPIN , please enter the 4-digit MPIN</string>
    <string name="enter_old_pin"> Enter old MPIN </string>
    <string name="enter_new_mpin">Enter new MPIN </string>
    <string name="enter_confirm_mpin"> Enter confirm MPIN </string>
    <string name="wallet_trabsfer">Wallet transfer  </string>
    <string name="account_balance">Account balance  </string>
    <string name="logout">Logout  </string>
    <string name="change_mpin">Change Mpin  </string>
    <string name="transaction_history">Transaction history  </string>
    <string name="stock_report">Stock report  </string>
    <string name="order_pin">Order PIN  </string>
    <string name="language_change">Language Change</string>
    <string name="reprint">Reprint</string>
    <string name="sync">Sync</string>
    <string name="contact_details">Contact</string>
</resources>