<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:background="@drawable/ani_green_g" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/languageChoose"
            android:textColor="#203682"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/englishLanguageChooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/squre_editext"
            android:text="@string/englisg" />

        <Button
            android:id="@+id/frenchLanguageChooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/squre_editext"
            android:text="@string/arabic" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight=".2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/nextGen"
            android:textColor="#203682"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"

            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>