<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@drawable/resultfield"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/res_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/dialogheading"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/greydark"
        android:textStyle="bold" />


    <Button
        android:id="@+id/dialogbutton1"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/squre_editext_2"
        android:text="@string/close"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/printButton"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/squre_editext_2"
        android:text="@string/print"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/responsestring"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="43dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@android:color/black" />

</RelativeLayout>
