<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            layout="@layout/backgroundfile" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="321dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/chngpinfieldbox">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="101dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/pupup" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/imageView1"
                android:layout_alignTop="@+id/imageView1"
                android:layout_alignRight="@+id/et_oldPin"
                android:layout_marginTop="29dp"
                android:layout_marginRight="6dp"
                android:gravity="right"
                android:text="@string/change_mpin_display"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_oldPin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/textView1"

                android:layout_alignLeft="@+id/imageView1"
                android:layout_alignRight="@+id/imageView1"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/squre_editext"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_old_pin"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />


            <Button
                android:id="@+id/imageButton1"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_confirmPin"
                android:layout_alignRight="@+id/et_confirmPin"
                android:layout_marginTop="18dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/squre_editext_2"
                android:text="@string/confirm"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/et_confirmPin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/et_newPin"
                android:textCursorDrawable="@null"

                android:layout_alignLeft="@+id/et_newPin"
                android:layout_alignRight="@+id/et_newPin"
                android:layout_marginTop="14dp"
                android:background="@drawable/squre_editext"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_confirm_mpin"
                android:inputType="numberPassword"


                android:maxLength="4"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_newPin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"

                android:layout_below="@+id/et_oldPin"
                android:layout_alignLeft="@+id/et_oldPin"
                android:layout_alignRight="@+id/et_oldPin"
                android:layout_marginTop="14dp"
                android:background="@drawable/squre_editext"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_new_mpin"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>