<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:fillViewport="true"
    android:layout_height="fill_parent"
    >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <include

        layout="@layout/backgroundfile"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="223dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/box">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="101dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/pupup" />

        <EditText
            android:id="@+id/edittext_mpin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/textView1"


            android:layout_alignLeft="@+id/imageView1"
            android:layout_alignRight="@+id/imageView1"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="19dp"

            android:layout_marginRight="5dp"
            android:background="@drawable/squre_editext"
            android:gravity="center_vertical"
            android:hint="@string/enter_mpin_balance_text"

            android:inputType="numberPassword"
            android:maxLength="4"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="15sp">

        </EditText>

        <Button
            android:id="@+id/imageButton1"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_mpin"
            android:layout_alignRight="@+id/edittext_mpin"
            android:layout_marginTop="18dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/squre_editext_2"
            android:text="@string/confirm"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/edittext_mpin"
            android:layout_alignRight="@+id/edittext_mpin"
            android:layout_alignParentTop="true"
            android:layout_marginTop="33dp"
            android:layout_marginRight="4dp"
            android:gravity="right"
            android:text="@string/transHistory_display"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </RelativeLayout>



</RelativeLayout>

</ScrollView>
